2003-10-11  Andrew Lindeman  <joyoflinux@yahoo.com> 1.4-pl2-cvs-b1

	* Fixed a security issue in the setup/index.php file, which could be
	  exploited maliciously to allow remote files to be included, leading
	  to code injection.

===============================================================================
2003-10-01			v1.4-pl1-lang1 release
===============================================================================

2003-10-01 Jens Tkotz <jens@peino.de> 1.4-pl1-lang1

        * Fixed Bug in initlanguage() which caused Gallery
          not to detect Broweserlanguage when using Opera

	* Fixed Bug in report.

	* New Languages: Bulgarian (bg_BG), Brazilian Portuguese (pt_BR), Korean (ko_KR),
			 Hungarian (hu_HU)			

	* Language updates: German (de_DE), Polish (pl_PL), Icelandish (is_IS); Finnish (fi_FI),
			    Czech (cs_CZ), Hebrew (he_IL), Turkish (tr_TR), Dutch (nl_NL),
			    Spanish (es_ES), Japanese (ja_JP), Traditional Chinese (zh_TW)

	* Changed charset for Czech (cs_CZ) to windows-1250

	* removed broken lines in .po files 
	  (thanks to donwillingham for help and script !)

	* Added Copyright to po files

===============================================================================
2003-09-12                     v1.4-pl1 release
===============================================================================

2003-09-12  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4-pl1

	* Fixed a critical bug introduced in 1.4-final-cvs-b5 which caused
	  all image rotations to fail.

===============================================================================
2003-09-12                       v1.4 release
===============================================================================

2003-09-11  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4-final-cvs-b7
	
	* Updated .mo files for languages fixed in -b4.

2003-09-11  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4-final-cvs-b6

	* upgrade_albums.php could go into an infinite loop with a corrupted