@@ -40,8 +40,8 @@ if (!isset($gallery)) {
 	$gallery = new stdClass();
 }
 
-$gallery->version = "1.4-pl2-cvs-b1";
-$gallery->config_version ='48.1';
+$gallery->version = "1.4-pl2-cvs-b2";
+$gallery->config_version = '48.1';
 $gallery->album_version = '15.1';
 $gallery->remote_protocol_version = 1;
 $gallery->user_version = 1;
