@@ -1,3 +1,11 @@
+2003-10-11  Bharat Mediratta  <bharat@menalto.com> 1.4-pl2-cvs-b2
+
+	* Fixed config versioning bug where versions have decimal values.  We
+	  now quote the value in config.php at all times.
+
+	* Further improved security in the setup directory for Windows 
+	  installations.  
+
 2003-10-11  Andrew Lindeman  <joyoflinux@yahoo.com> 1.4-pl2-cvs-b1
 
 	* Fixed a security issue in the setup/index.php file, which could be
